fixed text too long bug

--- a/article/static/article/assets/css/style.css
+++ b/article/static/article/assets/css/style.css
@@ -3,7 +3,7 @@
 html, body {
         padding:1em;
         margin:auto;
-        max-width:42em;
+        /* max-width:42em; */
         background:#fefefe;
   }
 body {
